tests/ui/eii/unsafe_impl_err.stderr
error: `#[foo]` is unsafe to implement
  --> $DIR/unsafe_impl_err.rs:17:1
   |
LL | #[foo]
   | ^^^^^^
   |
help: wrap the attribute in `unsafe(...)`
   |
LL | #[unsafe(foo)]
   |   +++++++   +

error: `#[baz]` is unsafe to implement
  --> $DIR/unsafe_impl_err.rs:26:1
   |
LL | #[baz]
   | ^^^^^^
   |
help: wrap the attribute in `unsafe(...)`
   |
LL | #[unsafe(baz)]
   |   +++++++   +

error: aborting due to 2 previous errors

